--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "langchain": "0.0.41",
     "lucide-react": "^0.125.0",
     "next": "13.2.3",
+    "openai": "^3.2.1",
     "pdf-parse": "1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -45,9 +46,6 @@
     "tailwindcss": "^3.2.7",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
-  },
-  "engines": {
-    "node": ">=18"
   },
   "keywords": [
     "starter",
